@@ -1,5 +1,10 @@
 2004-12-15 Bart Hakvoort  <gparted@users.sf.net>
 
+	* Added dialog (accessable from 'gparted' menu) which shows supported operations for the various filesystems.
+	  I plan to put some more info in it, like what is missing etc..
+
+2004-12-15 Bart Hakvoort  <gparted@users.sf.net>
+
 	* src/Dialog_Partition_Copy: fixed small error with incorrect display of used space and did some cleanups.
 
 2004-12-15 Bart Hakvoort  <gparted@users.sf.net>
